; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_punycode.c_encode_digit.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_punycode.c_encode_digit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @encode_digit(i32 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp sgt i32 %4, 25
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = add nsw i32 %7, 22
  %9 = trunc i32 %8 to i8
  store i8 %9, i8* %2, align 1
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = add nsw i32 %11, 97
  %13 = trunc i32 %12 to i8
  store i8 %13, i8* %2, align 1
  br label %14

14:                                               ; preds = %10, %6
  %15 = load i8, i8* %2, align 1
  ret i8 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
